--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tanbir portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<section class="top-banner">
+    <div class="half">
+        <h1>Welcome To</h1> 
+    <h1><span class="orange-color">Tanbir Ahmed's</span> Website</h1>
+    <h3>i am a learner and explorar</h3>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eum, ipsam et quisquam dicta amet ex modi ullam atque alias! Eveniet beatae, minus at nemo consequuntur temporibus sed accusantium qui.</p>
+   <a class="hire-me-button" target="_blank" href="https://www.linkedin.com/in/tanbir-ahmed-037703113/">Hire Me</a>
+    </div>
+   <div class="half">
+    <img src="images/my-photo7.png" alt="tanbir-image">
+   </div>
+</section>
 </body>
 </html>
