--- a/index.html
+++ b/index.html
@@ -23,5 +23,18 @@
     <img src="images/my-photo7.png" alt="tanbir-image">
    </div>
 </section>
+
+<section class="dream-big">
+    <div class="half">
+        <img src="images/my-photo9.png" alt="tanbir-2nd-img">
+    </div>
+
+    <div class="half">
+        <h1>Dream Big</h1>
+        <h2>Become A Web Developer</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime minus, cupiditate aspernatur nisi voluptate ab vel tenetur obcaecati natus quos placeat facere temporibus nesciunt ducimus ipsum officia minima?</p>
+        <a class="hire-me-button" target="_blank" href="">DOWNLOAD RESUME</a>
+    </div>
+</section>
 </body>
 </html>
