--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,31 +11,68 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<section class="top-banner">
-    <div class="half">
-        <h1>Welcome To</h1> 
-    <h1><span class="orange-color">Tanbir Ahmed's</span> Website</h1>
-    <h3>i am a learner and explorar</h3>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eum, ipsam et quisquam dicta amet ex modi ullam atque alias! Eveniet beatae, minus at nemo consequuntur temporibus sed accusantium qui.</p>
-   <a class="hire-me-button" target="_blank" href="https://www.linkedin.com/in/tanbir-ahmed-037703113/">Hire Me</a>
-    </div>
-   <div class="half">
-    <img src="images/my-photo7.png" alt="tanbir-image">
-   </div>
-</section>
+    <section class="top-banner flexible-container">
+        <div class="half">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Tanbir Ahmed's</span> Website</h1>
+            <h3>i am a learner and explorar</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eum, ipsam et quisquam dicta amet ex modi
+                ullam atque alias! Eveniet beatae, minus at nemo consequuntur temporibus sed accusantium qui.</p>
+            <a class="hire-me-button" target="_blank" href="https://www.linkedin.com/in/tanbir-ahmed-037703113/">Hire
+                Me</a>
+        </div>
+        <div class="half">
+            <img src="images/my-photo7.png" alt="tanbir-image">
+        </div>
+    </section>
 
-<section class="dream-big">
-    <div class="half">
-        <img src="images/my-photo9.png" alt="tanbir-2nd-img">
-    </div>
+    <section class="dream-big flexible-container">
+        <div class="half">
+            <img src="images/my-photo9.png" alt="tanbir-2nd-img">
+        </div>
 
-    <div class="half">
-        <h1>Dream Big</h1>
-        <h2>Become A Web Developer</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime minus, cupiditate aspernatur nisi voluptate ab vel tenetur obcaecati natus quos placeat facere temporibus nesciunt ducimus ipsum officia minima?</p>
-        <a class="hire-me-button" target="_blank" href="">DOWNLOAD RESUME</a>
-    </div>
-</section>
+        <div class="half">
+            <h1>Dream Big</h1>
+            <h2>Become A Web Developer</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime minus, cupiditate aspernatur
+                nisi voluptate ab vel tenetur obcaecati natus quos placeat facere temporibus nesciunt ducimus ipsum
+                officia minima?</p>
+            <a class="hire-me-button" target="_blank" href="https://sites.google.com/view/tanbir-ahmed/my-cv">DOWNLOAD
+                RESUME</a>
+        </div>
+    </section>
+
+    <section class="experiance">
+
+        <h1>Experiances</h1>
+
+        <div class="flexible-container">
+            <div id="full" class="exp">
+                <h2>Full Stack Developer</h2>
+                <h3 class="orange-color">2022-present | pro level developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem accusamus amet quasi. A adipisci
+                    reprehenderit voluptatibus aut quas temporibus perferendis, illo, consequatur molestiae quasi
+                    provident veniam excepturi iusto architecto numquam.</p>
+            </div>
+
+            <div id="baby" class="exp">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2020-2022 | programming Hero web developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis architecto quae accusamus
+                    doloremque facilis porro, suscipit delectus corrupti, molestias ipsa, commodi iste. Suscipit esse
+                    eaque ducimus voluptatibus, ipsam dolorum dolorem.</p>
+            </div>
+        </div>
+
+    </section>
 </body>
+
+<footer>
+    <p>
+        A Tanbir Ahmed Creation | Copyright Reserved | @tanbirahmed |2022
+    </p>
+</footer>
+
 </html>
